--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "NODE_ENV=production node index.js",
-		"dev": "NODE_ENV=development nodemon index.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"start": "node index.cjs",
+		"dev": "nodemon index.cjs",
+		"test": "nodemon mongo.cjs"
 	},
 	"author": "",
 	"license": "ISC",
