--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
 		"express": "^4.18.2",
 		"express-async-errors": "^3.1.1",
 		"jsonwebtoken": "^9.0.2",
-		"mongoose": "^8.1.1"
+		"mongoose": "^8.1.1",
+		"nodemailer": "^6.10.0",
+		"stripe": "^17.4.0"
 	},
 	"devDependencies": {
 		"nodemon": "^3.1.7"
