--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
 	"scripts": {
 		"start": "node index.cjs",
 		"dev": "nodemon index.cjs",
-		"test": "nodemon mongo.cjs"
+		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"bcrypt": "^5.1.1",
+		"bigdecimal.js": "^1.3.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.1",
 		"express": "^4.18.2",
